--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.10.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
+    "next-intl": "^4.0.2",
     "payload": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
